--- a/Vienna/Interfaces/nl.lproj/GroupFolder.strings
+++ b/Vienna/Interfaces/nl.lproj/GroupFolder.strings
@@ -1,5 +1,5 @@
 /* Class = "NSTextFieldCell"; title = "New Group Folder"; ObjectID = "32"; */
-"32.title" = "Nieuwe groepsmap";
+"32.title" = "Nieuwe map";
 
 /* Class = "NSButtonCell"; title = "Save"; ObjectID = "34"; */
 "34.title" = "Bewaar";
