--- a/Vienna/Interfaces/es.lproj/FeedCredentials.strings
+++ b/Vienna/Interfaces/es.lproj/FeedCredentials.strings
@@ -19,3 +19,9 @@
 /* Class = "NSTextFieldCell"; title = "URL:"; ObjectID = "Lvs-Rd-GZy"; */
 "Lvs-Rd-GZy.title" = "URL:";
 
+/* Class = "NSTextFieldCell"; title = "Details"; ObjectID = "VkU-PT-7wf"; */
+"VkU-PT-7wf.title" = "Detalles";
+
+/* Class = "NSTextFieldCell"; title = "Feed:"; ObjectID = "yIO-aF-1Qg"; */
+"yIO-aF-1Qg.title" = "Fuente:";
+
