--- a/Vienna/Interfaces/pt.lproj/ActivityViewer.strings
+++ b/Vienna/Interfaces/pt.lproj/ActivityViewer.strings
@@ -1,8 +1,8 @@
 /* Class = "NSWindow"; title = "Activity"; ObjectID = "8"; */
-"8.title" = "Janela de Actividade";
+"8.title" = "Actividade";
 
 /* Class = "NSTableColumn"; headerCell.title = "Source"; ObjectID = "18"; */
-"18.headerCell.title" = "Origem";
+"18.headerCell.title" = "Fonte";
 
 /* Class = "NSTableColumn"; headerCell.title = "Status"; ObjectID = "19"; */
 "19.headerCell.title" = "Estado";
