--- a/Vienna/Interfaces/pt.lproj/Preferences.strings
+++ b/Vienna/Interfaces/pt.lproj/Preferences.strings
@@ -1,50 +1,83 @@
 /* Class = "NSTextFieldCell"; title = "When viewing articles or web pages:"; ObjectID = "2IW-It-hcT"; */
-"2IW-It-hcT.title" = "Quando visualizar artigos ou páginas web:";
+"2IW-It-hcT.title" = "Quando visualizar artigos ou páginas na teia:";
 
 /* Class = "NSTextFieldCell"; title = "The settings here should not need to be changed for the normal use of Vienna. Refer to the Help file for details of each setting."; ObjectID = "4Qn-qF-kSp"; */
-"4Qn-qF-kSp.title" = "Estas opções não devem ser alteradas para o uso normal do Vienna. Consulte o ficheiro de Ajuda para detalhes de cada opção.";
+"4Qn-qF-kSp.title" = "Estas definições não devem ser alteradas para um uso normal do Vienna. Consulte o ficheiro de Ajuda para esclarecimentos sobre cada uma.";
+
+/* Class = "NSButtonCell"; title = "Mark updated articles as new"; ObjectID = "4vm-80-j33"; */
+"4vm-80-j33.title" = "Assinalar os artigos actualizados como novos";
+
+/* Class = "NSTextFieldCell"; title = "However, high numbers also render your computer less responsive while refreshing feeds."; ObjectID = "5EA-1i-TuA"; */
+"5EA-1i-TuA.title" = "Contudo, um número elevado pode tornar o seu computador mais lento enquanto os fluxos são actualizados.";
 
 /* Class = "NSMenuItem"; title = "Every 6 hours"; ObjectID = "6GF-Pk-gI9"; */
 "6GF-Pk-gI9.title" = "A cada 6 horas";
 
+/* Class = "NSTextFieldCell"; title = "Concurrent downloads:"; ObjectID = "6oJ-Rh-rgA"; */
+"6oJ-Rh-rgA.title" = "Descargas em simultâneo:";
+
 /* Class = "NSMenuItem"; title = "Manually"; ObjectID = "7Za-ay-jlt"; */
 "7Za-ay-jlt.title" = "Manualmente";
+
+/* Class = "NSButtonCell"; title = "Display feeds with unread articles with bold font"; ObjectID = "86e-38-zCh"; */
+"86e-38-zCh.title" = "Apresentar a negrito os fluxos com artigos por ler";
 
 /* Class = "NSTextFieldCell"; title = "Mark current article read:"; ObjectID = "adB-qE-xKg"; */
 "adB-qE-xKg.title" = "Marcar artigo actual como lido:";
 
 /* Class = "NSMenuItem"; title = "Manually"; ObjectID = "ANH-Pd-PJC"; Note = "Erase deleted articles: Manually"; */
-"ANH-Pd-PJC.title" = "Nunca";
+"ANH-Pd-PJC.title" = "Manualmente";
 
 /* Class = "NSMenuItem"; title = "Every 30 minutes"; ObjectID = "aWg-mD-YWn"; */
 "aWg-mD-YWn.title" = "A cada 30 minutos";
 
 /* Class = "NSTextFieldCell"; title = "Move articles to Trash:"; ObjectID = "bom-nB-4zx"; */
-"bom-nB-4zx.title" = "Mover artigos para o Lixo:";
+"bom-nB-4zx.title" = "Mover artigos para o lixo:";
 
 /* Class = "NSTextFieldCell"; title = "Login:"; ObjectID = "bwY-9N-h4N"; */
-"bwY-9N-h4N.title" = "Nome:";
+"bwY-9N-h4N.title" = "Identificar-se:";
 
 /* Class = "NSMenuItem"; title = "After one day"; ObjectID = "c4l-M5-qB1"; */
-"c4l-M5-qB1.title" = "Após um Dia";
+"c4l-M5-qB1.title" = "Decorrido um dia";
 
 /* Class = "NSButtonCell"; title = "Select…"; ObjectID = "cbn-xq-UFr"; */
 "cbn-xq-UFr.title" = "Seleccionar…";
 
+/* Class = "NSMenuItem"; title = "Medium"; ObjectID = "ClO-ha-l48"; */
+"ClO-ha-l48.title" = "Médio";
+
+/* Class = "NSButtonCell"; title = "Preview new browser"; ObjectID = "DDY-fS-V5T"; */
+"DDY-fS-V5T.title" = "Experimentar o novo navegador";
+
 /* Class = "NSButtonCell"; title = "Show website icons in the feed list"; ObjectID = "dkm-xW-4If"; */
-"dkm-xW-4If.title" = "Mostrar imagens da pastas na lista de pastas";
+"dkm-xW-4If.title" = "Mostrar imagens das pastas na lista de fluxos";
 
 /* Class = "NSMenuItem"; title = "After two weeks"; ObjectID = "Dw9-en-4Zu"; */
-"Dw9-en-4Zu.title" = "Após 2 Semanas";
+"Dw9-en-4Zu.title" = "Após duas semanas";
 
 /* Class = "NSButtonCell"; title = "Open new links in the background"; ObjectID = "erE-oh-cbw"; */
-"erE-oh-cbw.title" = "Abrir novos links em backgroung";
+"erE-oh-cbw.title" = "Abrir ligações novas em plano de fundo";
 
 /* Class = "NSButtonCell"; title = "Show in menu bar"; ObjectID = "FFP-H1-weF"; */
 "FFP-H1-weF.title" = "Mostrar na barra de menu";
 
+/* Class = "NSTextFieldCell"; title = "You may have to relaunch Vienna after changing this setting for it to take effect."; ObjectID = "fgw-cI-bAr"; */
+"fgw-cI-bAr.title" = "Poderá ter de reiniciar o Vienna para que a alteração desta definição surta efeito.";
+
 /* Class = "NSButtonCell"; title = "Open links in external browser"; ObjectID = "flH-2D-s6O"; */
-"flH-2D-s6O.title" = "Abrir links num browser externo";
+"flH-2D-s6O.title" = "Abrir ligações num navegador externo";
+
+/* Class = "NSTextFieldCell"; title = "Vienna has a new browser built on top of WebKit. It is faster and more secure.\nAfter changing this setting, restart Vienna to test it. Feedback is very welcome!"; ObjectID = "Fv8-Xx-YR0"; */
+"Fv8-Xx-YR0.title" = "O Vienna tem um novo navegador baseado no WebKit. É mais rápido e mais seguro.\nDepois de mudar esta definição, reinicie o Vienna para o experimentar. Agradecemos os seus comentários!";
+
+/* Class = "NSTextFieldCell"; title = "The higher the number, the quicker your subscriptions will be downloaded."; ObjectID = "g3K-qh-M6y"; */
+"g3K-qh-M6y.title" = "Quanto maior o número, mais rapidamente as suas assinaturas serão descarregadas.";
+
+/* Class = "NSTextField"; ibShadowedToolTip = "Address of a server supporting the Open Reader API"; ObjectID = "gKc-l8-p9m"; */
+"gKc-l8-p9m.ibShadowedToolTip" = "Endereço dum servidor compatível com Open Reader";
+
+/* Class = "NSMenuItem"; title = "Ask when Vienna quits"; ObjectID = "gnv-f7-Z4Z"; Note = "Erase deleted articles: Ask when Vienna quits"; */
+"gnv-f7-Z4Z.title" = "Perguntar antes de sair do Vienna";
 
 /* Class = "NSMenuItem"; title = "Every 3 hours"; ObjectID = "GSh-ct-FMo"; */
 "GSh-ct-FMo.title" = "A cada 3 horas";
@@ -53,10 +86,19 @@
 "h9d-GD-q32.title" = "Nunca";
 
 /* Class = "NSButtonCell"; title = "Check for newer versions of Vienna on start up"; ObjectID = "haP-20-AwJ"; */
-"haP-20-AwJ.title" = "Verificar novas versões do Vienna ao iniciar";
+"haP-20-AwJ.title" = "Procurar por novas versões do Vienna ao iniciar";
+
+/* Class = "NSMenuItem"; title = "Small"; ObjectID = "hd4-wx-xuK"; */
+"hd4-wx-xuK.title" = "Pequeno";
+
+/* Class = "NSTextFieldCell"; title = "Erase deleted articles:"; ObjectID = "HH2-sh-rEx"; */
+"HH2-sh-rEx.title" = "Purgar os artigos apagados:";
 
 /* Class = "NSTextFieldCell"; title = "When new unread articles are retrieved:"; ObjectID = "iCs-T5-L1c"; */
 "iCs-T5-L1c.title" = "Quando forem recebidos novos artigos:";
+
+/* Class = "NSPopUpButton"; ibShadowedToolTip = "Select a server supporting the Open Reader API"; ObjectID = "iHl-tr-paa"; */
+"iHl-tr-paa.ibShadowedToolTip" = "Seleccione um servidor compatível com o Open Reader";
 
 /* Class = "NSTextFieldCell"; title = "Article list font:"; ObjectID = "ITA-U9-lhX"; */
 "ITA-U9-lhX.title" = "Tipo de letra da lista de artigos:";
@@ -68,19 +110,22 @@
 "Jk6-0r-7Gs.title" = "Nunca usar tipos de letra mais pequenas do que";
 
 /* Class = "NSButtonCell"; title = "After \"Next Unread\" command"; ObjectID = "jkb-TT-wPC"; */
-"jkb-TT-wPC.title" = "Após comando \"Próximo não lido\"";
+"jkb-TT-wPC.title" = "Após comando \"Seguinte por ler\"";
 
 /* Class = "NSMenuItem"; title = "Every hour"; ObjectID = "jvO-Ef-TTd"; */
 "jvO-Ef-TTd.title" = "A cada hora";
 
+/* Class = "NSViewController"; title = "Syncing"; ObjectID = "Lfh-L2-KcO"; */
+"Lfh-L2-KcO.title" = "Sincronização";
+
 /* Class = "NSButtonCell"; title = "Check for new articles on start up"; ObjectID = "Ljf-Qd-6Ho"; */
-"Ljf-Qd-6Ho.title" = "Verificar novos artigos ao iniciar";
+"Ljf-Qd-6Ho.title" = "Procurar por novos artigos ao iniciar";
 
 /* Class = "NSButtonCell"; title = "After a short delay"; ObjectID = "McN-fD-0Cv"; */
 "McN-fD-0Cv.title" = "Após uma pequena espera";
 
 /* Class = "NSButtonCell"; title = "Enable JavaScript in the internal browser"; ObjectID = "MnV-8D-Qyq"; */
-"MnV-8D-Qyq.title" = "Activar JavaScript no browser interno";
+"MnV-8D-Qyq.title" = "Activar JavaScript no navegador interno";
 
 /* Class = "NSViewController"; title = "Advanced"; ObjectID = "NjZ-bv-EoA"; */
 "NjZ-bv-EoA.title" = "Avançado";
@@ -89,13 +134,16 @@
 "nSW-3T-Zoh.title" = "Outro…";
 
 /* Class = "NSTextFieldCell"; title = "Password:"; ObjectID = "OD4-de-Vkx"; */
-"OD4-de-Vkx.title" = "Palavra-Passe:";
+"OD4-de-Vkx.title" = "Senha:";
 
 /* Class = "NSMenuItem"; title = "After one month"; ObjectID = "OIa-NQ-jQi"; */
-"OIa-NQ-jQi.title" = "Após um Mês";
+"OIa-NQ-jQi.title" = "Decorrido um mês";
 
 /* Class = "NSTextFieldCell"; title = "Check for new articles:"; ObjectID = "Oqg-6W-NAL"; */
 "Oqg-6W-NAL.title" = "Verificar novos artigos:";
+
+/* Class = "NSTextFieldCell"; title = "Server:"; ObjectID = "OuH-3K-YPK"; */
+"OuH-3K-YPK.title" = "Servidor:";
 
 /* Class = "NSMenuItem"; title = "Every 2 hours"; ObjectID = "pLH-VU-z2d"; */
 "pLH-VU-z2d.title" = "A cada 2 horas";
@@ -104,7 +152,10 @@
 "qYb-Sf-cEF.title" = "A cada 5 minutos";
 
 /* Class = "NSMenuItem"; title = "After two days"; ObjectID = "sJE-bd-4mK"; */
-"sJE-bd-4mK.title" = "Após 2 Dias";
+"sJE-bd-4mK.title" = "Decorridos dois dias";
+
+/* Class = "NSTextFieldCell"; title = "Feed list font size:"; ObjectID = "Sxj-Uk-jhk"; */
+"Sxj-Uk-jhk.title" = "Tamanho da letra dos fluxos:";
 
 /* Class = "NSViewController"; title = "General"; ObjectID = "T2z-OK-VtO"; */
 "T2z-OK-VtO.title" = "Geral";
@@ -112,8 +163,29 @@
 /* Class = "NSViewController"; title = "Appearance"; ObjectID = "U0J-a5-0Pj"; */
 "U0J-a5-0Pj.title" = "Aparência";
 
+/* Class = "NSButtonCell"; title = "Search for latest beta versions"; ObjectID = "u92-Bh-Wrz"; */
+"u92-Bh-Wrz.title" = "Procurar pelas versões experimentais mais recentes";
+
+/* Class = "NSButtonCell"; title = "Sync with an Open Reader server"; ObjectID = "Uyd-GK-jtn"; */
+"Uyd-GK-jtn.title" = "Sincronizar com um servidor Open Reader";
+
+/* Class = "NSButton"; ibShadowedToolTip = "Visit the website"; ObjectID = "V12-Ua-skO"; */
+"V12-Ua-skO.ibShadowedToolTip" = "Visitar a página na Teia";
+
+/* Class = "NSButtonCell"; title = "Display unread articles with bold font"; ObjectID = "VQH-xk-s5g"; */
+"VQH-xk-s5g.title" = "Apresentar a negrito os artigos por ler";
+
+/* Class = "NSViewController"; title = "Updates"; ObjectID = "wyk-W1-xMh"; */
+"wyk-W1-xMh.title" = "Actualizações";
+
 /* Class = "NSMenuItem"; title = "After one week"; ObjectID = "xfd-Vp-kJy"; */
-"xfd-Vp-kJy.title" = "Após uma Semana";
+"xfd-Vp-kJy.title" = "Decorrida uma semana";
+
+/* Class = "NSMenuItem"; title = "Large"; ObjectID = "xIg-ej-t3j"; */
+"xIg-ej-t3j.title" = "Grande";
+
+/* Class = "NSTextFieldCell"; title = "URL:"; ObjectID = "YG6-9k-gKH"; */
+"YG6-9k-gKH.title" = "URL:";
 
 /* Class = "NSMenuItem"; title = "Every 15 minutes"; ObjectID = "Ygu-Rj-E7a"; */
 "Ygu-Rj-E7a.title" = "A cada 15 minutos";
@@ -122,5 +194,8 @@
 "YHN-Up-rwa.title" = "Leitor RSS padrão:";
 
 /* Class = "NSTextFieldCell"; title = "Save downloaded files to:"; ObjectID = "yLU-Xs-TGw"; */
-"yLU-Xs-TGw.title" = "Salvar ficheiros descarregados em:";
+"yLU-Xs-TGw.title" = "Guardar ficheiros descarregados em:";
+
+/* Class = "NSMenuItem"; title = "When Vienna quits"; ObjectID = "Z9k-7x-3gF"; Note = "Erase deleted articles: When Vienna quits"; */
+"Z9k-7x-3gF.title" = "Quando o Vienna encerrar";
 
