--- a/Vienna/Interfaces/pt.lproj/SearchFolder.strings
+++ b/Vienna/Interfaces/pt.lproj/SearchFolder.strings
@@ -7,3 +7,6 @@
 /* Class = "NSButtonCell"; title = "Cancel"; ObjectID = "97"; */
 "97.title" = "Cancelar";
 
+/* Class = "NSTextFieldCell"; title = "Hold down the Option key to add nested rules."; ObjectID = "caT-eg-dXm"; */
+"caT-eg-dXm.title" = "Mantenha a tecla Opção premida para adicionar regras encaixadas.";
+
